--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start -p 3000",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "prisma:migrate": "prisma migrate dev",
+    "postinstall": "prisma generate",
+    "migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "next": "14.2.5",
