--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && prisma migrate deploy && next build",
-    "start": "next start -p 3000",
+    "start": "next start -H 0.0.0.0 -p $PORT",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "postinstall": "prisma generate",
     "migrate:deploy": "prisma migrate deploy"
   },
+    "engines": {
+      "node": ">=18.17.0"
+    },
   "dependencies": {
     "next": "14.2.5",
     "react": "18.3.1",
