--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && prisma migrate deploy && next build",
-    "start": "node scripts/startup-log.js && node scripts/check-build.js && node -e \"const { spawnSync } = require('child_process'); const port = process.env.PORT || '3000'; const r = spawnSync(process.platform==='win32'?'npx.cmd':'npx', ['next','start','-H','0.0.0.0','-p', String(port)], { stdio: 'inherit' }); process.exit(r.status ?? 1);\"",
+    "start": "node -e \"const { spawnSync } = require('child_process'); const path = require('path'); const fs = require('fs'); const cwd = process.cwd(); const inNext = path.basename(cwd) === '.next'; const root = inNext ? path.resolve(cwd, '..') : cwd; const port = process.env.PORT || '3000'; console.log('[startup] cwd', cwd); console.log('[startup] root', root); console.log('[startup] node', process.version); console.log('[startup] PORT', port); console.log('[startup] root has .next', fs.existsSync(path.join(root, '.next'))); const r = spawnSync(process.platform==='win32'?'npx.cmd':'npx', ['next','start','-H','0.0.0.0','-p', String(port)], { stdio: 'inherit', cwd: root }); process.exit(r.status ?? 1);\"",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
