security audit: re-enable admin auth, add rate limiting, CORS, sanitization, security headers, fix Prisma schema
Critical fixes:
- Re-enable Basic Auth on /admin (was commented out, exposing all lead PII)
- Add rate limiting (5 req/min/IP) and CORS origin validation on POST /api/lead
- Add HTML sanitization via isomorphic-dompurify in HtmlContent
- Remove environment variable leaks from /api/health
- Remove error detail rendering in admin error boundary and catch block

Security hardening:
- Add security headers (HSTS, X-Frame-Options, nosniff, Referrer-Policy)
- Add path traversal protection in lib/content.ts
- Remove output: standalone from next.config.js

Database/Prisma:
- Fix message column from VARCHAR(191) to TEXT (was silently truncating)
- Fix email column to VARCHAR(255) per RFC spec
- Add updatedAt, soft-delete (deleted) fields to Lead model
- Add indexes on email and createdAt
- Add migration file for schema changes

Housekeeping:
- Fix .env.example to show MySQL URL (was SQLite)
- Expand .gitignore (.next, .vercel, .env.local, *.log, etc.)
- Simplify start script in package.json
- Replace img with next/image for logo
- Update footer copy (remove stale Hostinger reference)
- Add lastmod dates to sitemap.xml
- Add .eslintrc.json

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Copy to .env and fill in values
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="mysql://user:password@localhost:3306/globescraper"
+SHADOW_DATABASE_URL="mysql://user:password@localhost:3306/globescraper_shadow"
 
-# Basic Auth for /admin
+# Basic Auth for /admin (required in production)
 BASIC_AUTH_USER="admin"
 BASIC_AUTH_PASS="change-me"
 
