--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ BASIC_AUTH_PASS="change-me"
 
 # Optional: where to notify yourself (future)
 NOTIFY_EMAIL=""
+
+# Google Analytics 4
+NEXT_PUBLIC_GA_MEASUREMENT_ID="G-XXXXXXXXXX"
