--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@prisma/client": "5.18.0",
     "@upstash/ratelimit": "^2.0.8",
     "@upstash/redis": "^1.36.2",
-    "argon2": "^0.44.0",
+    "bcryptjs": "^3.0.3",
     "isomorphic-dompurify": "^3.0.0",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.30",
@@ -30,6 +30,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
