--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "5.18.0",
     "@upstash/ratelimit": "^2.0.8",
     "@upstash/redis": "^1.36.2",
+    "@vercel/blob": "^2.3.0",
     "bcryptjs": "^3.0.3",
     "isomorphic-dompurify": "^3.0.0",
     "next": "14.2.5",
