--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@upstash/redis": "^1.36.2",
     "@vercel/blob": "^2.3.0",
     "bcryptjs": "^3.0.3",
-    "isomorphic-dompurify": "^3.0.0",
+    "dompurify": "^3.3.1",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.30",
     "react": "18.3.1",
