feat: add Google OAuth sign-in/sign-up
- Add Google provider to NextAuth config
- Add 'Continue with Google' button on login page
- Add 'Sign up with Google' button on signup page
- Add signIn callback to block disabled users via OAuth
- Add divider and Google button styles
- Update .env.example with Google OAuth vars
- Add form action/method hint for Chrome password manager

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,13 @@ AUTH_SECRET=""
 UPSTASH_REDIS_REST_URL=""
 UPSTASH_REDIS_REST_TOKEN=""
 
+# ─── Google OAuth ────────────────────────────────────────────
+# Create credentials at https://console.cloud.google.com/apis/credentials
+# Application type: Web application
+# Authorized redirect URI: http://localhost:3000/api/auth/callback/google
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+
 # ─── Optional ────────────────────────────────────────────────
 NOTIFY_EMAIL=""
 NEXT_PUBLIC_GA_MEASUREMENT_ID="G-XXXXXXXXXX"
