feat: add Admin AI Blog Generator for Cambodia living guides
- Admin-only content generator at /admin/content-generator
- Gemini 2.0 Flash integration for SEO article generation
- Source discovery, scraping, and facts extraction pipeline
- Draft management with preview, edit, and publish workflow
- Progress bar UI with stage indicators
- Rate limited to 10 generations/day per admin
- Green Publish button (never auto-publishes)
- Em dash validation and banned word enforcement
- Prisma models: GeneratedArticleDraft, GeneratedArticleSource, GeneratedArticleRun
- Full CSS theming matching existing admin styles

--- a/.env.example
+++ b/.env.example
@@ -38,4 +38,10 @@ GOOGLE_CLIENT_SECRET=""
 
 # ─── Optional ────────────────────────────────────────────────
 NOTIFY_EMAIL=""
+
+# ─── AI Blog Generator (Gemini) ─────────────────────────────
+# Required for the Admin AI Blog Generator feature.
+# Get your API key at https://aistudio.google.com/app/apikey
+# Add to .env.local AND Vercel Environment Variables.
+GEMINI_API_KEY=""
 NEXT_PUBLIC_GA_MEASUREMENT_ID="G-XXXXXXXXXX"
