--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "next-auth": "5.0.0-beta.30",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-markdown": "^10.1.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "zod": "3.23.8"
   },
   "devDependencies": {
