--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-markdown": "^10.1.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
+    "resend": "^6.9.2",
     "zod": "3.23.8"
   },
   "devDependencies": {
