--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-next": "14.2.5",
     "prisma": "5.18.0",
     "tsx": "^4.21.0",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "vitest": "^4.0.18"
   }
 }
