feat: replace Google CSE with Serper.dev for web search
Google deprecated 'Search the entire web' for Programmable Search
Engines, making CSE unusable for open web discovery.

- Replace Google CSE API calls with Serper.dev (Google Search API)
  in searchTopicsPipeline, newsTopicDiscovery, and contentDiscovery
- Serper uses simple POST + X-API-KEY header (no engine ID needed)
- Free tier: 2,500 searches on signup, no credit card required
- Add fail-fast check for SERPER_API_KEY in pipeline orchestrator
- Hide 'Broaden search' button when search is not configured
- Update .env.example with Serper setup instructions
- 42 tests passing, 0 type errors

--- a/.env.example
+++ b/.env.example
@@ -44,4 +44,12 @@ NOTIFY_EMAIL=""
 # Get your API key at https://aistudio.google.com/app/apikey
 # Add to .env.local AND Vercel Environment Variables.
 GEMINI_API_KEY=""
+
+# ─── Serper.dev (Google Search API) ─────────────────────────────
+# Required for the "Search Topics" feature in the blog generator
+# and competitor article discovery.
+# 1. Sign up at https://serper.dev/ (2,500 free searches, no card required)
+# 2. Copy your API key from the dashboard → SERPER_API_KEY
+# Add to .env.local AND Vercel Environment Variables.
+SERPER_API_KEY=""
 NEXT_PUBLIC_GA_MEASUREMENT_ID="G-XXXXXXXXXX"
