--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vercel/blob": "^2.3.0",
     "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.3",
+    "cheerio": "^1.0.0",
     "dompurify": "^3.3.1",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.30",
