--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "5.18.0",
+    "@types/leaflet": "^1.9.21",
     "@upstash/ratelimit": "^2.0.8",
     "@upstash/redis": "^1.36.2",
     "@vercel/blob": "^2.3.0",
@@ -26,10 +27,12 @@
     "bcryptjs": "^3.0.3",
     "cheerio": "^1.0.0",
     "dompurify": "^3.3.1",
+    "leaflet": "^1.9.4",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.30",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "^10.1.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
