--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-dom": "18.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "playwright": "^1.58.2",
     "prisma": "5.18.0",
     "tsx": "^4.21.0",
     "typescript": "5.5.4",
