--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^3.0.3",
     "cheerio": "^1.0.0",
     "dompurify": "^3.3.1",
+    "isomorphic-dompurify": "^3.0.0",
     "leaflet": "^1.9.4",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.30",
