--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.3.1",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "resend": "^6.9.2",
