--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "remark-gfm": "^4.0.1",
     "resend": "^6.9.2",
     "svix": "^1.86.0",
+    "undici": "^7.22.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
