perf: reduce DB connection usage - remove migrate from build, pool limit 3, 3s batch cooldown

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma migrate deploy && next build",
+    "build": "prisma generate && next build",
     "start": "next start -H 0.0.0.0 -p $PORT",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
